--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
 
 
 
-    <footer class="bg-dark text-light mt-4 wow fadeInRight">
+    <footer class="bg-black-hdi text-light mt-4 wow fadeInRight ">
         <!-- <div class="footer-shape">
             <img src="assets/img/shape/4.png" alt="Shape">
         </div> -->
@@ -814,15 +814,15 @@
                     <div class="col-lg-4 col-md-6 item mb-4 d-md-none d-lg-block d-none">
                         <div class="f-item twitter-widget">
                             <h4 class="widget-title d-none">Contact Info</h4>
-                            <div class="address mt-lg-5">
+                            <div class="address mt-lg">
                                 <ul>
                                     <li>
                                         <div class="icon">
                                             <i class="bi bi-instagram"></i>
                                         </div>
                                         <div class="content">
-                                            <a style=" font-family: pragmatica;"href="https://instagram.com/hdi.gadingserpong" target="_blank">
                                             <strong>Instagram:</strong>
+                                            <a href="https://instagram.com/hdi.gadingserpong" target="_blank">
                                             hdi.gadingserpong</a>
                                         </div>
                                     </li>
@@ -856,9 +856,6 @@
             </div>
         </div>
     </footer>
-
-    
-        
 
     <script>
         let text = document.getElementById('shakingText');
