--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <h2 class="wow fadeInDown red-hdi animate__animated animate__bounce animate__infinite" ><strong>KAMU MASIH MUDA, TAPI BADAN TERASA JOMPO? </strong></h2>
                             <div class="mt-2"> </div>
                             <p class="wow fadeInDown paragraf-hero" style="line-height: 1.2;">Mulai usia 25 tahun, metabolisme tubuh mulai melambat.</p>
-                            <p class="wow fadeInDown paragraf-hero" style="line-height: 1.2;">Tubuh kita mungkin terlihat sehat dari luar, tapi sebenarnya terus ‘terbakar dari dalam’ akibat asupan gula berlebih. 
+                            <p class="wow fadeInDown paragraf-hero fw-bold" style="line-height: 1.2;">Tubuh kita mungkin terlihat sehat dari luar, tapi sebenarnya terus ‘terbakar dari dalam’ akibat asupan gula berlebih. 
                             </p>
                             <p class="wow fadeInDown paragraf-hero" style="line-height: 1.2;">Efeknya? Tubuh mudah lelah, cepat emosi, dan pemulihan melambat.
                             </p>
@@ -369,9 +369,9 @@
 
 
 
-    <div id="favorit" class="features-carousel-area carousel-shadow half-bg py-1" data-wow-duration="3s">
+    <div id="favorit" class="features-carousel-area carousel-shadow half-bg py-0" data-wow-duration="3s">
         <div class="container">
-            <div class="col-lg-12 mt-5 wow fadeInUp">
+            <div class="col-lg-12 mt-0 wow fadeInUp">
     
                  <div class="card-fact"> <span style="position: absolute; top: -10px; left: -10px; transform: rotate(-20deg); font-weight: bold; font-size: 30px; color: var(--red-hdi);">Fact!</span>
             <p style="margin: 0; color: #000;">
@@ -659,12 +659,12 @@
 
     </div>
 
-    <div id="join" class="bg-cream pricing-area default-padding-top bottom-less"  style="background-image: url(assets/img/shape/pattern-hdi.png);">
-        <!-- Fixed Shape -->
+    <!-- <div id="join" class="bg-cream pricing-area default-padding-top bottom-less"  style="background-image: url(assets/img/shape/pattern-hdi.png);">
+        (Fixed Shape <- comment)
         <div class="shape-top">
             <img src="assets/img/shape/9.png" alt="Shape">
         </div>
-        <!-- End Fixed Shape -->
+        ( End Fixed Shape <- comment)
         <div class="container">
             <div  id="join" class="pricing text-center">
                 <div class="row"  style="background-image: url(assets/img/shape/pattern-hdi.png);">
@@ -725,7 +725,7 @@
                 
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 
@@ -785,8 +785,8 @@
                                         </div>
 
                                         <div class="content d-lg-none d-block">
-                                            <a style=" font-family: pragmatica;"href="https://instagram.com/hdi.gadingserpong" target="_blank">
                                             <strong>Instagram:</strong>
+                                            <a href="https://instagram.com/hdi.gadingserpong" target="_blank">
                                             hdi.gadingserpong</a>
                                         </div>
                                     </li>
